--- a/shopping/shopping/src/main/resources/application.properties
+++ b/shopping/shopping/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.database=oracle
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.devtools.remote.restart.enabled=true
 spring.output.ansi.enabled=always
