--- a/shopping/shopping/src/main/resources/application.properties
+++ b/shopping/shopping/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8090
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=tester
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=customer
 spring.datasource.password=1234
 
 spring.jpa.database=oracle
